# MeetingSample-Backend

./: README.md  manage.py  pyproject.toml  requirements.txt
common/: serializers.py  urls.py  views.py
delay_task/: views.py
deployment/: Dockerfile  deployment.yaml
group/: serializers.py  urls.py  views.py
meeting/: admin.py  models.py  serializers.py  urls.py  views.py
meeting_sample/: asgi.py  env.py  settings.py  urls.py  wsgi.py
poll/: admin.py  models.py  serializers.py  urls.py  views.py
user/: serializers.py  urls.py  views.py
utils/: encryption.py  errors.py  lvb.py  resp.py
utils/cache/: __init__.py  connection.py  delay_queue.py  group.py  meeting.py  share_user.py
